@@ -26,12 +26,28 @@ scene.file = cornell.scn
 #film.imagepipelines.0.0.src = lnf
 #film.imagepipelines.0.0.display = sRGB
 #film.imagepipelines.0.0.view = Film
-##
+################################################################################
 # Using a look mode
 film.imagepipelines.0.0.type = TONEMAP_OPENCOLORIO
 film.imagepipelines.0.0.mode = LOOK_CONVERSION
 film.imagepipelines.0.0.config = deps/filmic-blender-1.1.1/config.ocio
 film.imagepipelines.0.0.src = Linear
-film.imagepipelines.0.0.look = Greyscale
-#film.imagepipelines.0.0.look = "Very High Contrast"
-
+film.imagepipelines.0.0.look = "Very High Contrast"
+#
+film.imagepipelines.0.1.type = TONEMAP_OPENCOLORIO
+film.imagepipelines.0.1.mode = DISPLAY_CONVERSION
+film.imagepipelines.0.1.config = deps/filmic-blender-1.1.1/config.ocio
+# NOTE: the previous "Look" produce an output in "Filmic Log Encoding" color space
+film.imagepipelines.0.1.src = "Filmic Log Encoding"
+film.imagepipelines.0.1.display = sRGB
+film.imagepipelines.0.1.view = "sRGB OETF"
+##
+# Using a display mode with look
+film.imagepipelines.1.0.type = TONEMAP_OPENCOLORIO
+film.imagepipelines.1.0.mode = DISPLAY_CONVERSION
+film.imagepipelines.1.0.config = deps/filmic-blender-1.1.1/config.ocio
+film.imagepipelines.1.0.src = Linear
+film.imagepipelines.1.0.display = sRGB
+film.imagepipelines.1.0.view = "sRGB OETF"
+film.imagepipelines.1.0.look = "Very High Contrast"
+################################################################################
